--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 @import "tailwindcss";
@@ -15,7 +15,7 @@
 
   --color-dark-100: #0f0d23;
 
-  --font-dm-sans: DM Sans, sans-serif;
+  --font-dm-sans: "Ubuntu", sans-serif;
 
   --breakpoint-xs: 480px;
 
@@ -24,7 +24,7 @@
 
 @layer base {
   body {
-    font-family: "DM Sans", serif;
+    font-family: "Ubuntu", sans-serif;
     font-optical-sizing: auto;
     background: #030014;
   }
