feat: add Home and MovieDetails pages with movie search and details functionality

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --color-gray-100: #9ca4ab;
 
   --color-dark-100: #0f0d23;
+  --button-light: #201d49;
 
   --font-dm-sans: "Ubuntu", sans-serif;
 
